--- a/bin/index.html
+++ b/bin/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>\n\n<html>\n\t<head>\n\t\t<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1"/>
 
 \t\t<!-- A5-CL -->
-\t\t<script src="src/clMain.js" type="text/javascript"></script>
+\t\t<script src="src/main.js" type="text/javascript"></script>
 \t\t<script src="src/CLBase.js" type="text/javascript"></script>
 \t\t<script src="src/CLError.js" type="text/javascript"></script>
 \t\t<script src="src/CLWorker.js" type="text/javascript"></script>
@@ -29,4 +29,5 @@
 \t\t<script src="src/CLPlugin.js" type="text/javascript"></script>
 \t\t<script src="src/CLAddon.js" type="text/javascript"></script>
 \t\t<script src="src/CL.js" type="text/javascript"></script>
+\t\t<script src="src/CLMain.js" type="text/javascript"></script>
 <body>\n\t</body>\n</html>
