Integration fixes, cleaned up CLBase

--- a/bin/index.html
+++ b/bin/index.html
@@ -1,33 +1,41 @@
-<!DOCTYPE html>\n\n<html>\n\t<head>\n\t\t<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1"/>
+<!DOCTYPE html>
 
-\t\t<!-- A5-CL -->
-\t\t<script src="src/main.js" type="text/javascript"></script>
-\t\t<script src="src/CLBase.js" type="text/javascript"></script>
-\t\t<script src="src/CLError.js" type="text/javascript"></script>
-\t\t<script src="src/CLWorker.js" type="text/javascript"></script>
-\t\t<script src="src/CLEvent.js" type="text/javascript"></script>
-\t\t<script src="src/interfaces/IHTMLTemplate.js" type="text/javascript"></script>
-\t\t<script src="src/interfaces/ILogger.js" type="text/javascript"></script>
-\t\t<script src="src/interfaces/IServiceURLRewriter.js" type="text/javascript"></script>
-\t\t<script src="src/interfaces/IDataStorage.js" type="text/javascript"></script>
-\t\t<script src="src/core/PluginManager.js" type="text/javascript"></script>
-\t\t<script src="src/core/EnvManager.js" type="text/javascript"></script>
-\t\t<script src="src/core/Instantiator.js" type="text/javascript"></script>
-\t\t<script src="src/CLConfig.js" type="text/javascript"></script>
-\t\t<script src="src/core/Utils.js" type="text/javascript"></script>
-\t\t<script src="src/core/RequestManager.js" type="text/javascript"></script>
-\t\t<script src="src/core/ManifestManager.js" type="text/javascript"></script>
-\t\t<script src="src/core/JSON.js" type="text/javascript"></script>
-\t\t<script src="src/core/DataCache.js" type="text/javascript"></script>
-\t\t<script src="src/core/ResourceCache.js" type="text/javascript"></script>
-\t\t<script src="src/core/GlobalUpdateTimer.js" type="text/javascript"></script>
-\t\t<script src="src/core/Core.js" type="text/javascript"></script>
-\t\t<script src="src/mixins/DataStore.js" type="text/javascript"></script>
-\t\t<script src="src/CLService.js" type="text/javascript"></script>
-\t\t<script src="src/CLSocket.js" type="text/javascript"></script>
-\t\t<script src="src/CLAjax.js" type="text/javascript"></script>
-\t\t<script src="src/CLPlugin.js" type="text/javascript"></script>
-\t\t<script src="src/CLAddon.js" type="text/javascript"></script>
-\t\t<script src="src/CL.js" type="text/javascript"></script>
-\t\t<script src="src/CLMain.js" type="text/javascript"></script>
-<body>\n\t</body>\n</html>
+<html>
+	<head>
+		<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1"/>
+
+		<!-- A5-CL -->
+		<script src="lib/A5.js" type="text/javascript"></script>
+		<script src="src/main.js" type="text/javascript"></script>
+		<script src="src/CLBase.js" type="text/javascript"></script>
+		<script src="src/CLError.js" type="text/javascript"></script>
+		<script src="src/CLWorker.js" type="text/javascript"></script>
+		<script src="src/CLEvent.js" type="text/javascript"></script>
+		<script src="src/interfaces/IHTMLTemplate.js" type="text/javascript"></script>
+		<script src="src/interfaces/ILogger.js" type="text/javascript"></script>
+		<script src="src/interfaces/IServiceURLRewriter.js" type="text/javascript"></script>
+		<script src="src/interfaces/IDataStorage.js" type="text/javascript"></script>
+		<script src="src/core/PluginManager.js" type="text/javascript"></script>
+		<script src="src/core/EnvManager.js" type="text/javascript"></script>
+		<script src="src/core/Instantiator.js" type="text/javascript"></script>
+		<script src="src/CLConfig.js" type="text/javascript"></script>
+		<script src="src/core/Utils.js" type="text/javascript"></script>
+		<script src="src/core/RequestManager.js" type="text/javascript"></script>
+		<script src="src/core/ManifestManager.js" type="text/javascript"></script>
+		<script src="src/core/JSON.js" type="text/javascript"></script>
+		<script src="src/core/DataCache.js" type="text/javascript"></script>
+		<script src="src/core/ResourceCache.js" type="text/javascript"></script>
+		<script src="src/core/GlobalUpdateTimer.js" type="text/javascript"></script>
+		<script src="src/core/Core.js" type="text/javascript"></script>
+		<script src="src/mixins/DataStore.js" type="text/javascript"></script>
+		<script src="src/mixins/BindableSource.js" type="text/javascript"></script>
+		<script src="src/CLService.js" type="text/javascript"></script>
+		<script src="src/CLSocket.js" type="text/javascript"></script>
+		<script src="src/CLAjax.js" type="text/javascript"></script>
+		<script src="src/CLPlugin.js" type="text/javascript"></script>
+		<script src="src/CLAddon.js" type="text/javascript"></script>
+		<script src="src/CL.js" type="text/javascript"></script>
+		<script src="src/CLMain.js" type="text/javascript"></script>
+	<body>
+	</body>
+</html>
