--- a/unitTests/index.html
+++ b/unitTests/index.html
@@ -15,6 +15,7 @@
 		<script src="../src/interfaces/ILogger.js" type="text/javascript"></script>
 		<script src="../src/interfaces/IServiceURLRewriter.js" type="text/javascript"></script>
 		<script src="../src/interfaces/IDataStorage.js" type="text/javascript"></script>
+		<script src="../src/interfaces/IBindableReceiver.js" type="text/javascript"></script>
 		<script src="../src/core/PluginManager.js" type="text/javascript"></script>
 		<script src="../src/core/EnvManager.js" type="text/javascript"></script>
 		<script src="../src/core/Instantiator.js" type="text/javascript"></script>
@@ -28,6 +29,8 @@
 		<script src="../src/core/GlobalUpdateTimer.js" type="text/javascript"></script>
 		<script src="../src/core/Core.js" type="text/javascript"></script>
 		<script src="../src/mixins/DataStore.js" type="text/javascript"></script>
+		<script src="../src/mixins/BindableSource.js" type="text/javascript"></script>
+		<script src="../src/mixins/Binder.js" type="text/javascript"></script>
 		<script src="../src/CLService.js" type="text/javascript"></script>
 		<script src="../src/CLSocket.js" type="text/javascript"></script>
 		<script src="../src/CLAjax.js" type="text/javascript"></script>
