--- a/unitTests/index.html
+++ b/unitTests/index.html
@@ -8,10 +8,11 @@
 		<script src="../lib/A5.js" type="text/javascript"></script>
 		<script src="../src/main.js" type="text/javascript"></script>
 		<script src="../src/CLBase.js" type="text/javascript"></script>
+		<script src="../src/CLInitializer.js" type="text/javascript"></script>
 		<script src="../src/CLError.js" type="text/javascript"></script>
-		<script src="../src/CLWorker.js" type="text/javascript"></script>
 		<script src="../src/CLEvent.js" type="text/javascript"></script>
 		<script src="../src/interfaces/IHTMLTemplate.js" type="text/javascript"></script>
+		<script src="../src/interfaces/ILaunchInterceptor.js" type="text/javascript"></script>
 		<script src="../src/interfaces/ILogger.js" type="text/javascript"></script>
 		<script src="../src/interfaces/IServiceURLRewriter.js" type="text/javascript"></script>
 		<script src="../src/interfaces/IDataStorage.js" type="text/javascript"></script>
@@ -22,10 +23,8 @@
 		<script src="../src/CLConfig.js" type="text/javascript"></script>
 		<script src="../src/core/Utils.js" type="text/javascript"></script>
 		<script src="../src/core/RequestManager.js" type="text/javascript"></script>
-		<script src="../src/core/ManifestManager.js" type="text/javascript"></script>
 		<script src="../src/core/JSON.js" type="text/javascript"></script>
 		<script src="../src/core/DataCache.js" type="text/javascript"></script>
-		<script src="../src/core/ResourceCache.js" type="text/javascript"></script>
 		<script src="../src/core/GlobalUpdateTimer.js" type="text/javascript"></script>
 		<script src="../src/core/Core.js" type="text/javascript"></script>
 		<script src="../src/mixins/DataStore.js" type="text/javascript"></script>
@@ -38,6 +37,7 @@
 		<script src="../src/CLAddon.js" type="text/javascript"></script>
 		<script src="../src/CL.js" type="text/javascript"></script>
 		<script src="../src/CLMain.js" type="text/javascript"></script>
+		<script src="../src/initializers/DOM.js" type="text/javascript"></script>
 		<script src="js/Main.js" type="text/javascript"></script>
 	<body>
 	</body>
