--- a/unitTests/index.html
+++ b/unitTests/index.html
@@ -2,6 +2,7 @@
 
 <html>
 	<head>
+		<meta charset=utf-8> 
 		<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1"/>
 
 		<!-- A5-CL -->
@@ -15,10 +16,9 @@
 		<script src="../src/interfaces/ILaunchInterceptor.js" type="text/javascript"></script>
 		<script src="../src/interfaces/ILogger.js" type="text/javascript"></script>
 		<script src="../src/interfaces/IServiceURLRewriter.js" type="text/javascript"></script>
-		<script src="../src/interfaces/IDataStorage.js" type="text/javascript"></script>
+		<script src="../src/interfaces/IDataCacheProvider.js" type="text/javascript"></script>
 		<script src="../src/interfaces/IBindableReceiver.js" type="text/javascript"></script>
 		<script src="../src/core/PluginManager.js" type="text/javascript"></script>
-		<script src="../src/core/EnvManager.js" type="text/javascript"></script>
 		<script src="../src/core/Instantiator.js" type="text/javascript"></script>
 		<script src="../src/CLConfig.js" type="text/javascript"></script>
 		<script src="../src/core/Utils.js" type="text/javascript"></script>
@@ -37,7 +37,17 @@
 		<script src="../src/CLAddon.js" type="text/javascript"></script>
 		<script src="../src/CL.js" type="text/javascript"></script>
 		<script src="../src/CLMain.js" type="text/javascript"></script>
-		<script src="../src/initializers/DOM.js" type="text/javascript"></script>
+		
+		<!-- DOM -->
+		<script src="../src/initializers/dom/DataCache.js" type="text/javascript"></script>
+		<script src="../src/initializers/dom/EnvManager.js" type="text/javascript"></script>
+		<script src="../src/initializers/dom/ResourceCache.js" type="text/javascript"></script>
+		<script src="../src/initializers/dom/ManifestManager.js" type="text/javascript"></script>
+		<script src="../src/initializers/dom/DOMInitializer.js" type="text/javascript"></script>
+		<script src="../src/initializers/dom/Utils.js" type="text/javascript"></script>
+		<script src="../src/initializers/dom/DOM.js" type="text/javascript"></script>
+		
+		
 		<script src="js/Main.js" type="text/javascript"></script>
 	<body>
 	</body>
