--- a/bin/index.html
+++ b/bin/index.html
@@ -12,6 +12,7 @@
 		<script src="src/CLEvent.js" type="text/javascript"></script>
 		<script src="src/interfaces/IHTMLTemplate.js" type="text/javascript"></script>
 		<script src="src/interfaces/ILogger.js" type="text/javascript"></script>
+		<script src="src/interfaces/IInstanceUIDWriter.js" type="text/javascript"></script>
 		<script src="src/interfaces/IServiceURLRewriter.js" type="text/javascript"></script>
 		<script src="src/interfaces/ILaunchInterceptor.js" type="text/javascript"></script>
 		<script src="src/interfaces/IDataCacheProvider.js" type="text/javascript"></script>
